--- a/Sync.Client/Shared/NavMenu.razor
+++ b/Sync.Client/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> LED Control
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="buttonconfig">
+                <span class="oi oi-calculator" aria-hidden="true"></span> Button Configuration
+            </NavLink>
+        </li>
     </ul>
 </div>
 
