Added 'Home' tab and changed overall color scheme

--- a/Sync.Client/Pages/_Host.cshtml
+++ b/Sync.Client/Pages/_Host.cshtml
@@ -2,6 +2,7 @@
 @namespace Sync.Client.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,60 @@
     <title>Sync</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/normalize.css" rel="stylesheet" />
+    <link href="~/css/theme.css" rel="stylesheet" />
+
+
+
+    <title>DB1 Pro</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="DB1 Pro: Macro Keyboard & DAC">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="../static/css/normalize.css">
+    <link rel="stylesheet" href="../static/css/theme.css">
+    <link rel="stylesheet" href="../static/css/bootstrap-iso.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="twitter:card" content="summary_large_image" />
+
+
+
+
+
+
+    <meta name="twitter:title" content="DB1 Pro: Macro Keyboard & DAC" />
+    <meta name="twitter:description" content="An all-in-one programmable keyboard with integrated volume control and headphone DAC." />
+    <meta name="twitter:image" content="https://nullbits.co/static/img/feature.jpg" />
+    <meta name="twitter:image:alt" content="DB1 Pro in action." />
+    <meta property="og:url" content="https://nullbits.co/db1pro/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="DB1 Pro: Macro Keyboard & DAC" />
+    <meta property="og:description" content="An all-in-one programmable keyboard with integrated volume control and headphone DAC." />
+    <meta property="og:image" content="https://nullbits.co/static/img/feature.jpg" />
+    <meta property="og:image:secure_url" content="https://nullbits.co/static/img/feature.jpg" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/static/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/static/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/static/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/static/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/static/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/static/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/static/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/static/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/static/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/static/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+
+
+
+
 </head>
 <body>
     <app>
@@ -18,5 +72,9 @@
     </app>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="~/js/circle.js"></script>
+    <script src="~/js/email-list.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
