--- a/Sync.Client/Shared/NavMenu.razor
+++ b/Sync.Client/Shared/NavMenu.razor
@@ -13,6 +13,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Connect">
+                <span class="oi oi-transfer" aria-hidden="true"></span> Connect Keyboard
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="ledcontrol">
                 <span class="oi oi-plus" aria-hidden="true"></span> LED Control
             </NavLink>
