--- a/Sync.Client/wwwroot/css/site.css
+++ b/Sync.Client/wwwroot/css/site.css
@@ -41,7 +41,7 @@ app {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #1C1A1F 0%, #3fe48f 1000%);
 }
 
 .sidebar .top-row {
@@ -122,11 +122,13 @@ app {
         flex-direction: row;
     }
 
+
     .sidebar {
-        width: 250px;
+        width: 300px;
         height: 100vh;
-        position: sticky;
+        position: fixed;
         top: 0;
+        z-index: 999;
     }
 
     .main .top-row {
@@ -135,7 +137,7 @@ app {
     }
 
     .main > div {
-        padding-left: 2rem !important;
+        padding-left: 327px !important;
         padding-right: 1.5rem !important;
     }
 
