fixed connect keyboard and home page formatting

--- a/Sync.Client/Pages/Index.razor
+++ b/Sync.Client/Pages/Index.razor
@@ -6,9 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="DB1 Pro: Macro Keyboard & DAC">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../static/css/normalize.css">
-    <link rel="stylesheet" href="../static/css/theme.css">
-    <link rel="stylesheet" href="../static/css/bootstrap-iso.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="css/bootstrap-iso.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="twitter:card" content="summary_large_image" />
 
@@ -36,29 +36,16 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/static/favicon/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/static/favicon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/static/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/static/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
+    <link rel="icon" type="img/png" sizes="192x192" href="/static/favicon/android-icon-192x192.png">
+    <link rel="icon" type="img/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
+    <link rel="icon" type="img/png" sizes="96x96" href="/static/favicon/favicon-96x96.png">
+    <link rel="icon" type="img/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/static/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     
-    <!--
-    <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '333190317591477');
-        fbq('track', 'PageView');
-    </script>
-    -->
+
 
 
 
@@ -73,24 +60,17 @@
 
     <header>
         <div class="hero-icon-wrap">
-            <img alt="Icon" src="../static/img/icon@1x.png"
-                 srcset="../static/img/icon@2x.png 2x, ../static/img/icon@1x.png 1x" />
+            <img alt="Icon" src="img/icon@1x.png"
+                 srcset="img/icon@2x.png 2x, img/icon@1x.png 1x" />
         </div>
         <div class="hero">
-            <div class="container">
-                <div class="l1 line-outer"><div class="line-inner"></div></div>
-                <div class="l2 line-outer"><div class="line-inner"></div></div>
-                <div class="l3 line-outer"><div class="line-inner"></div></div>
-                <div class="l4 line-outer"><div class="line-inner"></div></div>
-            </div>
             <h1 class="title center"><span>THE </span><br><span class="accent">ULTIMATE</span><br>PC COMPANION</h1>
         </div>
 
         <section class="product-detail center">
             <div class="detail-img-wrap with-video">
                 <span class="img-or-video header">
-                    <img id="headerIMG" alt="DB1 Pro" src="../static/img/hero@1x.png"
-                         srcset="../static/img/hero@2x.png 2x, ../static/img/hero@1x.png 1x" style="position: relative; z-index: 1; display: none;" />
+                    <img id="headerIMG" alt="DB1 Pro" style="width: 70%;" src="img/hero@2x.png"/>
                 </span>
             </div>
         </section>
@@ -112,7 +92,7 @@
     <section class="product-detail center" style="margin-top: 20px;">
         <div class="bootstrap background-black">
             <div class="card background-black">
-                <a href="https://igg.me/at/db1pro/"><img src="../static/img/social_card.png" class="card-img-top"></a>
+                <a href="https://igg.me/at/db1pro/"><img src="img/social_card.png" class="card-img-top"></a>
                 <div class="card-body" style="margin-top: 20px">
                     <a href="https://igg.me/at/db1pro/" class="card-img-top btn btn-primary"><h4 class="card-title accent">DB1 Pro: Programmable Macro Keypad & Headphone DAC</h4></a>
                     <a href="https://igg.me/at/db1pro/" class="card-img-top btn btn-primary">indiegogo.com</a>
@@ -153,10 +133,10 @@
         <div class="detail-img-wrap with-video">
             <span class="img-or-video">
                 <div class="cf">
-                    <img class="bottom" alt="Vertical" src="../static/img/vert2@1x.png"
-                         srcset="../static/img/vert2@2x.png 2x, ../static/img/vert2@1x.png 1x" />
-                    <img class="top" alt="Vertical" src="../static/img/vert1@1x.png"
-                         srcset="../static/img/vert1@2x.png 2x, ../static/img/vert1@1x.png 1x" />
+                    <img class="bottom" alt="Vertical" src="img/vert2@1x.png"
+                         srcset="img/vert2@2x.png 2x, img/vert2@1x.png 1x" />
+                    <img class="top" alt="Vertical" src="img/vert1@1x.png"
+                         srcset="img/vert1@2x.png 2x, img/vert1@1x.png 1x" />
                 </div>
             </span>
         </div>
@@ -168,8 +148,8 @@
         </div>
         <div class="detail-img-wrap with-video">
             <span class="img-or-video">
-                <img alt="Hardware" src="../static/img/hardware@1x.png"
-                     srcset="../static/img/hardware@2x.png 2x, ../static/img/hardware@1x.png 1x" />
+                <img alt="Hardware" src="img/hardware@1x.png"
+                     srcset="img/hardware@2x.png 2x, img/hardware@1x.png 1x" />
             </span>
         </div>
         <div class="detail-copy">
@@ -193,8 +173,8 @@
 
         <div class="detail-img-wrap with-video">
             <span class="img-or-video">
-                <img alt="Sync Icon" src="../static/img/sync@1x.png"
-                     srcset="../static/img/sync@2x.png 2x, ../static/img/sync@1x.png 1x" />
+                <img alt="Sync Icon" src="img/sync@1x.png"
+                     srcset="img/sync@2x.png 2x, img/sync@1x.png 1x" />
             </span>
         </div>
     </section>
@@ -326,8 +306,8 @@
     <h1 style="margin-top: 120px; text-align: center;">Interested?</h1>
     <section class="product-detail">
         <div class="footer">
-            <img id="footerIMG" alt="DB1 Pro" src="../static/img/hero@1x_alt1.png"
-                 srcset="../static/img/hero@2x_alt1.png 2x, ../static/img/hero@1x_alt1.png 1x" style="display: none;" />
+            <img id="footerIMG" alt="DB1 Pro" src="img/hero@1x_alt1.png"
+                 srcset="img/hero@2x_alt1.png 2x, img/hero@1x_alt1.png 1x" style="display: none;" />
         </div>
     </section>
 
@@ -340,7 +320,7 @@
     <section class="product-detail center" style="margin-top: 20px; margin-bottom: 20px">
         <div class="bootstrap background-black">
             <div class="card background-black">
-                <a href="https://igg.me/at/db1pro/"><img src="../static/img/social_card.png" class="card-img-top"></a>
+                <a href="https://igg.me/at/db1pro/"><img src="img/social_card.png" class="card-img-top"></a>
                 <div class="card-body" style="margin-top: 20px">
                     <a href="https://igg.me/at/db1pro/" class="card-img-top tn btn-primary"><h4 class="card-title accent">DB1 Pro: Programmable Macro Keypad & Headphone DAC</h4></a>
                     <a href="https://igg.me/at/db1pro/" class="card-img-top btn btn-primary">indiegogo.com</a>
