--- a/Sync.Client/Components/KeyboardList.razor
+++ b/Sync.Client/Components/KeyboardList.razor
@@ -40,7 +40,7 @@
         padding-left: 12px;
     }
 
-    .choice-list-group-item .title {
+    .choice-list-group-item .titleKeyboardList {
         display: inline-block;
         padding-left: 12px;
     }
@@ -77,7 +77,7 @@
                         <img src="@it.Icon" height="28" />
                     </div>
                 }
-                <div class="title">
+                <div class="titleKeyboardList">
                     @it.Title
                 </div>
             </div>
