--- a/Sync.Client/Pages/_Host.cshtml
+++ b/Sync.Client/Pages/_Host.cshtml
@@ -52,10 +52,10 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/static/favicon/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/static/favicon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/static/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/static/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
+    <link rel="icon" type="img/png" sizes="192x192" href="/static/favicon/android-icon-192x192.png">
+    <link rel="icon" type="img/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
+    <link rel="icon" type="img/png" sizes="96x96" href="/static/favicon/favicon-96x96.png">
+    <link rel="icon" type="img/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/static/favicon/ms-icon-144x144.png">
@@ -67,9 +67,26 @@
 
 </head>
 <body>
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '333190317591477');
+        fbq('track', 'PageView');
+    </script>
+
     <app>
         @(await Html.RenderComponentAsync<App>(RenderMode.ServerPrerendered))
     </app>
+
 
     <script src="_framework/blazor.server.js"></script>
     <script src="~/js/circle.js"></script>
