--- a/Sync.Client/Components/KeyboardList.razor
+++ b/Sync.Client/Components/KeyboardList.razor
@@ -66,7 +66,7 @@
     }
 </style>
 
-<ul class="choice-list-group  custom-scrollbar">
+<ul class="choice-list-group"> <!--removed custom-scrollbar as it doesnt appear to work-->
     @foreach (var it in List)
     {
         <li class="choice-list-group-item" @onclick="@( () => SelectItemHandler(it) )">
