--- a/Sync.Client/Pages/Connect.razor
+++ b/Sync.Client/Pages/Connect.razor
@@ -7,7 +7,7 @@
 
 <button class="btn btn-primary" @onclick="LoadKeyboardsAsync">Load Keyboards</button>
 
-<p>Available keyboards:</p>
+<p class="pt-2">Available keyboards:</p>
 
     <div>
         <KeyboardList List="Keyboards"></KeyboardList>
