--- a/Sync.Client/Shared/NavMenu.razor
+++ b/Sync.Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Sync</a>
+    <a class="navbar-brand" href="">Nullbits Sync App</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
