--- a/Sync.Client/Pages/ButtonConfig.razor
+++ b/Sync.Client/Pages/ButtonConfig.razor
@@ -193,6 +193,171 @@
             </div>
             <div class="col-8 border border-dark">
                 <h5>MACRO</h5>
+                <div class="row">
+                    <div class="col-6">
+                        <h6>Key #</h6>
+                        <p>Set Keycode to KC_MACRO*:</p>
+                        <p class="mt-3">Action:</p>
+                        <select name="key" class="form-control">
+                            <option value="0">Type</option>
+                            <option value="1">Press</option>
+                            <option value="2">Release</option>
+                            <option value="3">Wait</option>
+                            <option value="4">Interval</option>
+                        </select>
+                        <p class="mt-3">Keycode:</p>
+                        <select name="key" class="form-control">
+                            <option value="1">KC_1</option>
+                            <option value="2">KC_2</option>
+                            <option value="3">KC_3</option>
+                            <option value="4">KC_4</option>
+                            <option value="5">KC_5</option>
+                            <option value="6">KC_6</option>
+                            <option value="7">KC_7</option>
+                            <option value="8">KC_8</option>
+                            <option value="9">KC_9</option>
+                            <option value="0">KC_0</option>
+                            <option value="A">KC_A</option>
+                            <option value="B">KC_B</option>
+                            <option value="C">KC_C</option>
+                            <option value="D">KC_D</option>
+                            <option value="E">KC_E</option>
+                            <option value="F">KC_F</option>
+                            <option value="G">KC_G</option>
+                            <option value="H">KC_H</option>
+                            <option value="I">KC_I</option>
+                            <option value="J">KC_J</option>
+                            <option value="K">KC_K</option>
+                            <option value="L">KC_L</option>
+                            <option value="M">KC_M</option>
+                            <option value="N">KC_N</option>
+                            <option value="O">KC_O</option>
+                            <option value="P">KC_P</option>
+                            <option value="Q">KC_Q</option>
+                            <option value="R">KC_R</option>
+                            <option value="S">KC_S</option>
+                            <option value="T">KC_T</option>
+                            <option value="U">KC_U</option>
+                            <option value="V">KC_V</option>
+                            <option value="W">KC_W</option>
+                            <option value="X">KC_X</option>
+                            <option value="Y">KC_Y</option>
+                            <option value="Z">KC_Z</option>
+                            <option value="-">KC_MINUS</option>
+                            <option value="=">KC_EQUAL</option>
+                            <option value="[">KC_LBRACKET</option>
+                            <option value="]">KC_RBRACKET</option>
+                            <option value="\">KC_BSLASH</option>
+                            <option value=";">KC_SCOLON</option>
+                            <option value="'">KC_QUOTE</option>
+                            <option value="`">KC_GRAVE</option>
+                            <option value=",">KC_COMMA</option>
+                            <option value=".">KC_DOT</option>
+                            <option value="/">KC_SLASH</option>
+                            <option value="ENTER">KC_ENTER</option>
+                            <option value="ESC">KC_ESCAPE</option>
+                            <option value="BACKSPACE">KC_BSPACE</option>
+                            <option value="TAB">KC_TAB</option>
+                            <option value="SPACE">KC_SPACE</option>
+                            <option value="CAPS">KC_CAPSLOCK</option>
+                            <option value="APP">KC_APPLICATION</option>
+                            <option value="LCTRL">KC_LCTRL</option>
+                            <option value="LSHIFT">KC_LSHIFT</option>
+                            <option value="LALT">KC_LALT</option>
+                            <option value="LGUI">KC_LGUI</option>
+                            <option value="RCTRL">KC_RCTRL</option>
+                            <option value="RSHIFT">KC_RSHIFT</option>
+                            <option value="RALT">KC_RALT</option>
+                            <option value="RGUI">KC_RGUI</option>
+                            <option value="F1">KC_F1</option>
+                            <option value="F2">KC_F2</option>
+                            <option value="F3">KC_F3</option>
+                            <option value="F4">KC_F4</option>
+                            <option value="F5">KC_F5</option>
+                            <option value="F6">KC_F6</option>
+                            <option value="F7">KC_F7</option>
+                            <option value="F8">KC_F8</option>
+                            <option value="F9">KC_F9</option>
+                            <option value="F10">KC_F10</option>
+                            <option value="F11">KC_F11</option>
+                            <option value="F12">KC_F12</option>
+                            <option value="F13">KC_F13</option>
+                            <option value="F14">KC_F14</option>
+                            <option value="F15">KC_F15</option>
+                            <option value="F16">KC_F16</option>
+                            <option value="F17">KC_F17</option>
+                            <option value="F18">KC_F18</option>
+                            <option value="PSCR">KC_PSCREEN</option>
+                            <option value="SLCK">KC_SCROLLLOCK</option>
+                            <option value="PAUSE">KC_PAUSE</option>
+                            <option value="INS">KC_INSERT</option>
+                            <option value="DEL">KC_DELETE</option>
+                            <option value="HOME">KC_HOME</option>
+                            <option value="END">KC_END</option>
+                            <option value="PGUP">KC_PGUP</option>
+                            <option value="PGDN">KC_PGDOWN</option>
+                            <option value="LEFT">KC_LEFT</option>
+                            <option value="DOWN">KC_DOWN</option>
+                            <option value="UP">KC_UP</option>
+                            <option value="RIGHT">KC_RIGHT</option>
+                            <option value="POWER">KC_SYSTEM_POWER</option>
+                            <option value="SLEEP">KC_SYSTEM_SLEEP</option>
+                            <option value="WAKE">KC_SYSTEM_WAKE</option>
+                            <option value="MUTE">KC_AUDIO_MUTE</option>
+                            <option value="VOLU">KC_AUDIO_VOL_UP</option>
+                            <option value="VOLD">KC_AUDIO_VOL_DOWN</option>
+                            <option value="PLAY">KC_MEDIA_PLAY_PAUSE</option>
+                            <option value="STOP">KC_MEDIA_STOP</option>
+                            <option value="NEXT">KC_MEDIA_NEXT_TRACK</option>
+                            <option value="PREV">KC_MEDIA_PREV_TRACK</option>
+                            <option value="NLCK">KC_NUMLOCK</option>
+                            <option value="P/">KC_KP_SLASH</option>
+                            <option value="P*">KC_KP_ASTERISK</option>
+                            <option value="P-">KC_KP_MINUS</option>
+                            <option value="P+">KC_KP_PLUS</option>
+                            <option value="P.">KC_KP_DOT</option>
+                            <option value="P=">KC_KP_EQUAL</option>
+                            <option value="PENT">KC_KP_ENTER</option>
+                            <option value="P1">KC_KP_1</option>
+                            <option value="P2">KC_KP_2</option>
+                            <option value="P3">KC_KP_3</option>
+                            <option value="P4">KC_KP_4</option>
+                            <option value="P5">KC_KP_5</option>
+                            <option value="P6">KC_KP_6</option>
+                            <option value="P7">KC_KP_7</option>
+                            <option value="P8">KC_KP_8</option>
+                            <option value="P9">KC_KP_9</option>
+                            <option value="P0">KC_KP_0</option>
+                            <option value="MUTE/DEAFEN 1">KC_CHAT_MUTE_DEAFEN1</option>
+                            <option value="MUTE/DEAFEN 2">KC_CHAT_MUTE_DEAFEN2</option>
+                            <option value="MACRO 1">KC_MACRO1</option>
+                            <option value="MACRO 2">KC_MACRO2</option>
+                            <option value="MACRO 3">KC_MACRO3</option>
+                            <option value="MACRO 4">KC_MACRO4</option>
+                        </select>
+                        <div class="form-group mt-3">
+                            <label for="InputDelay">Delay/Interval (0 - 255 ms):</label>
+                            <input type="text" class="form-control" id="InputDelay" aria-describedby="InputDelay" placeholder="0">
+                        </div>
+                        <button class="btn btn-primary w-100 my-3">ADD ACTION</button>
+                    </div>
+                    <div class="col-6">
+                        <h6>Macros:</h6>
+                        <div class="border-dark row">
+                            <div class="col-6">
+                                <p>ACTION</p>
+                            </div>
+                            <div class="col-6">
+                                <p>VALUE</p>
+                            </div>
+                            <hr />
+                            <!--
+                            Implement looping function to display each desired macro
+                            -->
+                        </div>
+                        <button class="btn btn-primary w-100 my-5">SET MACRO</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
