--- a/Sync.Client/wwwroot/css/site.css
+++ b/Sync.Client/wwwroot/css/site.css
@@ -155,3 +155,8 @@ app {
     max-height: 200px;
     overflow-y: auto;
 }
+.img-center {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
